--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ permalink: /
 {% include use-cases.html %}
 {% include software.html %}
 {% include learn-more.html %}
-{% include papers.html %}
+{% include research.html %}
 {% include team.html %}
 {% include contact.html %}
 {% include funding.html%}
